tests/baselines/reference/typeFromPropertyAssignment32.types
=== tests/cases/conformance/salsa/expando.ts ===
function ExpandoMerge(n: number) {
>ExpandoMerge : typeof ExpandoMerge
>n : number

    return n;
>n : number
}
ExpandoMerge.p1 = 111
>ExpandoMerge.p1 = 111 : 111
>ExpandoMerge.p1 : number
>ExpandoMerge : typeof ExpandoMerge
>p1 : number
>111 : 111

ExpandoMerge.m = function(n: number) {
>ExpandoMerge.m = function(n: number) {    return n + 1;} : (n: number) => number
>ExpandoMerge.m : (n: number) => number
>ExpandoMerge : typeof ExpandoMerge
>m : (n: number) => number
>function(n: number) {    return n + 1;} : (n: number) => number
>n : number

    return n + 1;
>n + 1 : number
>n : number
>1 : 1
}
ExpandoMerge.p4 = 44444; // ok
>ExpandoMerge.p4 = 44444 : 44444
>ExpandoMerge.p4 : any
>ExpandoMerge : typeof ExpandoMerge
>p4 : any
>44444 : 44444

ExpandoMerge.p6 = 66666; // error: duplicate
>ExpandoMerge.p6 = 66666 : 66666
>ExpandoMerge.p6 : number
>ExpandoMerge : typeof ExpandoMerge
>p6 : number
>66666 : 66666

ExpandoMerge.p5 = 555555; // should be ok
>ExpandoMerge.p5 = 555555 : 555555
>ExpandoMerge.p5 : any
>ExpandoMerge : typeof ExpandoMerge
>p5 : any
>555555 : 555555

ExpandoMerge.p7 = 777777; // error: duplicate
>ExpandoMerge.p7 = 777777 : 777777
>ExpandoMerge.p7 : number
>ExpandoMerge : typeof ExpandoMerge
>p7 : number
>777777 : 777777

var n = ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 + ExpandoMerge.m(12) + ExpandoMerge(1001);
>n : any
>ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 + ExpandoMerge.m(12) + ExpandoMerge(1001) : any
>ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 + ExpandoMerge.m(12) : any
>ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 : any
>ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 : any
>ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 : number
>ExpandoMerge.p1 + ExpandoMerge.p2 : number
>ExpandoMerge.p1 : number
>ExpandoMerge : typeof ExpandoMerge
>p1 : number
>ExpandoMerge.p2 : number
>ExpandoMerge : typeof ExpandoMerge
>p2 : number
>ExpandoMerge.p3 : number
>ExpandoMerge : typeof ExpandoMerge
>p3 : number
>ExpandoMerge.p4 : any
>ExpandoMerge : typeof ExpandoMerge
>p4 : any
>ExpandoMerge.p5 : any
>ExpandoMerge : typeof ExpandoMerge
>p5 : any
>ExpandoMerge.m(12) : number
>ExpandoMerge.m : (n: number) => number
>ExpandoMerge : typeof ExpandoMerge
>m : (n: number) => number
>12 : 12
>ExpandoMerge(1001) : number
>ExpandoMerge : typeof ExpandoMerge
>1001 : 1001

=== tests/cases/conformance/salsa/ns.ts ===
namespace ExpandoMerge {
>ExpandoMerge : typeof ExpandoMerge

    export var p3 = 333;
>p3 : number
>333 : 333

    export var p4 = 4; // ok
>p4 : any
>4 : 4

    export var p5 = 5; // ok
>p5 : any
>5 : 5

    export let p6 = 6; // error: duplicate
>p6 : number
>6 : 6

    export let p7 = 7; // error: duplicate
>p7 : number
>7 : 7
}
namespace ExpandoMerge {
>ExpandoMerge : typeof ExpandoMerge

    export var p2 = 222;
>p2 : number
>222 : 222
}

